[package]
name = "windows-dscp-fix"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "windows_dscp_fix"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.46"
features=[ "Win32_System_IO", "Win32_Foundation", "Win32_Networking_WinSock", "Win32_NetworkManagement_QoS",
            "Win32_System_Diagnostics_Debug"]
